feat: add customer account registration
