# backend/src/main/java/com/pranay/gitprasaaran/api/security/RegistrationResponse.java
@@ -1,0 +1,4 @@
+package com.pranay.gitprasaaran.api.security;
+
+public record RegistrationResponse(Long id, String email) {
+}
